# CuttingPlanes

./: .gitignore  CuttingPlanes.py  Visualizer.ipynb  basis.lp  cp.json  milp.json  readme.md  soplex.lp  test.json
Code/: CMakeLists.txt  MixedIntegerLinearProgram.h  Solvers.h  Utils.h  tests.cpp
CuttingPlanes/: .gitignore  AlgLibSimplexSolver.h  CMakeLists.txt  CuttingPlanes.cpp  CuttingPlanes.h  LinearProgram.h  MixedIntegerLinearProgram.h  SimplexWrapper.h  SoPlexSolver.cpp  SoPlexSolver.h  Solvers.h  ToblexSolver.h  Typedefs.h  Utils.h  main.cpp  tests.cpp
data/: cp.json  infeasible.json  milp.json  milp_p331.json  milp_wolsey_8-3.json
slides/: header.sty  main.aux  main.bbl  main.bcf  main.blg  main.nav  main.out  main.run.xml  main.tex  main.toc  refs.bib
slides/sections/: BranchBound.aux  BranchBound.tex  BranchCut.aux  BranchCut.tex  CuttingPlanes.aux  CuttingPlanes.tex  MILP.aux  MILP.tex  MIR.aux  MIR.tex  cuts.aux  cuts.tex
